# rules_js

e2e/js_image_bzlmod/: MODULE.bazel
e2e/js_image_bzlmod/src/: BUILD.bazel
e2e/js_image_oci/: WORKSPACE
e2e/js_image_oci/src/: BUILD.bazel
