bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(name = "aspect_rules_js", version = "1.32.6")
bazel_dep(name = "rules_nodejs", version = "6.0.2")
bazel_dep(name = "rules_oci", version = "1.4.0")

# Node
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(
    name = "nodejs",
    node_version = "16.14.2",
)
use_repo(node, "nodejs_toolchains")

register_toolchains("@nodejs_toolchains//:all")

# JavaScript and TypeScript
npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")

# OCI images
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "debian",
    digest = "sha256:3d868b5eb908155f3784317b3dda2941df87bbbbaa4608f84881de66d9bb297b",
    image = "debian",
    platforms = [
        "linux/amd64",
    ],
)
use_repo(oci, "debian")
